// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<ul
  className="ant-timeline {\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}"
  id="default"
/>
`;

exports[`Render properties.items 1`] = `
<ul
  className="ant-timeline {\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}"
  id="properties.items"
/>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.items 1`] = `false`;

exports[`Test Schema properties.items 2`] = `
Array [
  Object {
    "dataPath": "/properties",
    "keyword": "additionalProperties",
    "message": "should NOT have additional properties",
    "params": Object {
      "additionalProperty": "items",
    },
    "schemaPath": "#/properties/properties/additionalProperties",
  },
]
`;
